added reading text

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 </head>
 <body>
     <h1>AgriLabs 3D Twin</h1>
-    <div id="tempRead"> 27.8</div>
-    <div id="humRead">78.9</div>
+    <div id="tempRead"> </div>
+    <div id="humRead"> </div>
     <script type="module" src="main.js"></script>
-    <script type="module" src="read.js"></script>
 </body>
 </html>
