testing input data

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 </head>
 <body>
     <h1>AgriLabs 3D Twin</h1>
-    <div id="tempRead"> </div>
+    <div id="tempRead">blank</div>
     <div id="humRead"> </div>
     <script type="module" src="main.js"></script>
+    <script src="getData.js"></script>
 </body>
 </html>
