--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>AgriLabs</title>
     <link rel="stylesheet" href="styles.css">
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <script src="//unpkg.com/brain.js"></script>
     <script type="importmap">
       {
         "imports": {
@@ -18,7 +19,7 @@
 <body>
     <h1>AgriLabs 3D Twin</h1>
     <div id="tempRead">blank</div>
-    <div id="humRead"> </div>
+    <div id="humRead">blank</div>
     <script type="module" src="main.js"></script>
     <script src="getData.js"></script>
 </body>
