--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 <body>
     <h1>AgriLabs 3D Twin</h1>
-    <div id="tempRead"></div>
-    <div id="humRead">blank</div>
+    <div id="tempRead"> </div>
+    <div id="humRead"> </div>
     <script type="module" src="main.js"></script>
 </body>
 </html>
